Set theme jekyll-theme-tactile

--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,5 @@ description: Software Engineer && Data Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /resources/images/TannerPic.jpg
+
+theme: jekyll-theme-tactile
